break test to see if CircleCI catches it (#21)
* break test to see if CircleCI catches it

* break test to see if CircleCI catches it

* fix test to see if CircleCI catches it

* try updating surefire plugin

* configure surefire

* move .gitignore to separate PR

* useSystemClassLoader