@@ -299,11 +299,15 @@
       </plugin>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.12</version>
+        <version>2.22.1</version>
         <configuration>
           <includes>
             <include>**/*Test.java</include>
           </includes>
+          <forkCount>3</forkCount>
+          <reuseForks>true</reuseForks>
+          <useSystemClassLoader>false</useSystemClassLoader>
+          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
         </configuration>
       </plugin>
       <plugin>
